Fixed rides alignment.

--- a/assets/styles/main.sass
+++ b/assets/styles/main.sass
@@ -567,6 +567,7 @@ footer
     width: 400px
     margin: 10px
     display: inline-block
+    vertical-align: top
 
     @media only screen and (max-width: 420px)
       width: 100%
